# oooooooo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build-appimage.sh  build-macapp.sh  readme.md
.github/workflows/: ci.yml  release.yml
clients/display/: CMakeLists.txt  Display.cpp  Display.h
clients/oooooooo/: CMakeLists.txt
clients/oooooooo/src/: AudioFile.cpp  AudioFile.h  BufDiskWorker.cpp  BufDiskWorker.h  Bus.h  Commands.cpp  Commands.h  Display.cpp  Display.h  DisplayMessage.cpp  DisplayMessage.h  DisplayRing.cpp  DisplayRing.h  DisplayUtils.h  DrawFunctions.cpp  DrawFunctions.h  HelpSystem.cpp  HelpSystem.h  IntroAnimation.cpp  IntroAnimation.h  JackClient.h  KeyboardHandler.cpp  KeyboardHandler.h  LFO.cpp  LFO.h  OscInterface.cpp  OscInterface.h  Parameter.cpp  Parameter.h  Parameters.cpp  Parameters.h  Perlin.cpp  Poll.h  Serializable.h  SessionRecorder.cpp  SessionRecorder.h  SoftcutClient.cpp  SoftcutClient.h  Utilities.h  VUMeter.cpp  (+3 more)
clients/softcut_jack_osc/: CMakeLists.txt
clients/softcut_jack_osc/src/: Bus.h  Commands.h  Display.cpp  Display.h  DisplayFont.h  DisplayRing.cpp  DisplayRing.h  DrawFunctions.cpp  DrawFunctions.h  HelpSystem.h  JackClient.h  KeyboardHandler.cpp  KeyboardHandler.h  OscInterface.cpp  Perlin.h  SoftcutClient.cpp  SoftcutClient.h  Utilities.h  main.cpp
dsp/: CMakeLists.txt
dsp/fverb/: CMakeLists.txt  FVerb.cpp  FVerb.h  FVerbDSP.h
dsp/tapefx/: CMakeLists.txt  TapeFX.cpp  TapeFX.h
dsp/utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
softcut-lib/: CMakeLists.txt
softcut-lib/include/softcut/: FadeCurves.h  Interpolate.h  ReadWriteHead.h  Resampler.h  SoftClip.h  Softcut.h  SubHead.h  Svf.h  TestBuffers.h  Types.h  Utilities.h  Voice.h
softcut-lib/src/: FadeCurves.cpp  ReadWriteHead.cpp  SubHead.cpp  Svf.cpp  Voice.cpp
tests/: test1.scd
